--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,13 @@ jobs:
         uses: actions/checkout@v3
       - run: ls -a
       - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.4
+        uses: actions/setup-java@v3
         with:
-          # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
           java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package  
+                   
 # tache en sequence
 #  other:
 #    needs: [demo]
